# upload-tunkin

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  EXECUTION_ORDER.md  README.md  docker-compose.yaml  log_config.yaml  pyproject.toml  test_dependency_override.py  test_file_gate.py  test_kpi_repository.py  test_kpi_sheet_parser.py  test_permission_checker.py  test_token_verifier.py
.beads/: issues.jsonl  metadata.json
app/: __init__.py  cli.py  main.py
app/auth/: menu_lookup.py  permission_checker.py  permissions.py  repository.py  router.py
app/core/: config.py  cors.py  databases.py  log_loader.py  security.py
app/models/: kpi.py  request_model.py  response_model.py
app/organization/: __init__.py  repository.py  router.py
app/repositories/: __init__.py  kpi_repository.py  organization_repository.py  sys_menu.py  sys_user.py  tunkin_repository.py
app/responses/: __init__.py  builder.py  errors.py  schemas.py
app/routers/: auth.py  organization.py  tunkin.py
app/services/: file_gate.py  kpi_sheet_parser.py
app/tunkin/: __init__.py  commands.py  repository.py  router.py  schemas.py  services.py
docs/adr/: 0001-tunkin-owns-organization-join.md
tasks/: 01-upload-tunkin-ufj.md  02-upload-tunkin-iw6.md  03-upload-tunkin-c5m.md  04-upload-tunkin-g7z.md  05-upload-tunkin-rsp.md  06-upload-tunkin-5i3.md  07-main-py-architecture.md  08-login-401-regression.md  09-domain-module-refactor.md
template/: Tunkin Template.xlsx  template.xlsx
test/: test_dependency_override.py  test_kpi_repository.py  test_kpi_sheet_parser.py  test_sqids.py
